--- a/lmsproject/app/views/courses/index.html.erb
+++ b/lmsproject/app/views/courses/index.html.erb
@@ -1,23 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Courses</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container">
+  <div class="row">
+    <h1 class="text-center">Fulano Mengánez</h1>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 text-center">
+      <h2>Your profile</h2>
+    </div>
+    <div class="col-sm-6 text-center">
+      <h2>Your courses</h2>
+      <ul><% @courses.each do |course| %>
+      <li><%= link_to "#{course.coursename}", course %></li>
+      <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
 
-  <tbody>
-    <% @courses.each do |course| %>
-      <tr>
-      <td><%= link_to "#{course.coursename}", course %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Course', new_course_path %>
