--- a/lmsproject/app/views/layouts/application.html.erb
+++ b/lmsproject/app/views/layouts/application.html.erb
@@ -2,11 +2,26 @@
 <html>
 <head>
   <title>Lmsproject</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="css/style.css.scss" />
 </head>
 <body>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img alt="Brand" src="...">
+      </a>   	
+    </div>
+    <ul>
+      <p class="navbar-text navbar-right">Signed in as <%= current_user.username %></p>
+      <%= link_to 'Logout', destroy_user_session_path, :class => "btn btn-default navbar-btn" %>
+    </ul>  
+  </div>
+</nav>
 
 <%= yield %>
 
