--- a/lmsproject/app/views/lessons/_form.html.erb
+++ b/lmsproject/app/views/lessons/_form.html.erb
@@ -1,11 +1,11 @@
-<%= simple_form_for(@post) do |f| %>
+<% simple_form_for([@course, @lesson]) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-group">
-    <%= f.input :title, input_html:{class:'form-control'} %>
+    <%= f.input :title, input_html: {class:'form-control'} %>
   </div>
   <div class="form-group">
-    <%= f.input :content, class:'summernote' %>
+    <%= f.input :body, class:'summernote' %>
   </div>
 
   <div class="form-group">
