--- a/lmsproject/app/views/courses/show.html.erb
+++ b/lmsproject/app/views/courses/show.html.erb
@@ -5,19 +5,7 @@
 	</div>
 	<div class="row">
 		<div class="col-sm-2 sidebar-offcanvas" id="sidebar" role="navigation">
-            <ul class="nav nav-pills nav-stacked">
-                <li class="nav-item"><a class="nav-link" href="#">Overview</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Reports</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Analytics</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Export</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Nav item</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Nav item</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Another</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Nav item</a></li>
-                <% if current_user.admin? == true %>
-                <li><%= link_to 'Add Lesson', new_course_lesson_path(@course, @lesson) %></li>
-                <% end %>
-            </ul>
+			<%= render 'sidebar' %>
 		</div>
 		<div class="col-sm-8">
 			<p>Lorem fistrum mamaar ese que llega apetecan jarl benemeritaar ese pedazo de. Diodeno mamaar ese que llega benemeritaar. Te va a hasé pupitaa torpedo torpedo a wan quietooor. Diodeno ese hombree a peich apetecan torpedo qué dise usteer quietooor por la gloria de mi madre qué dise usteer. A gramenawer la caidita papaar papaar se calle ustée se calle ustée pecador qué dise usteer papaar papaar jarl.</p>
