--- a/lmsproject/app/views/layouts/application.html.erb
+++ b/lmsproject/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
         <img alt="Brand" src="...">
       </a>   	
     </div>
-    <ul>
-      <p class="navbar-text navbar-right">Signed in as <%= current_user.username %></p>
+    <ul class="nav navbar-nav navbar-right">
+      <p class="navbar-text">Signed in as <%= current_user.username %></p>
       <%= link_to 'Logout', destroy_user_session_path, :class => "btn btn-default navbar-btn" %>
     </ul>  
   </div>
