--- a/lmsproject/app/views/lessons/_form.html.erb
+++ b/lmsproject/app/views/lessons/_form.html.erb
@@ -1,4 +1,4 @@
-<% simple_form_for([@course, @lesson]) do |f| %>
+<%= simple_form_for([@course, @lesson]) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-group">
