--- a/lmsproject/app/views/lessons/new.html.erb
+++ b/lmsproject/app/views/lessons/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Lesson</h1>
 
-<%= render 'form' %>
+<%= render partial: 'form' %>
 
-<%= link_to 'Back', course_lessons_path %>
+<%= link_to 'Back', course_path(@course) %>
